--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "homepage": "https://Abdo-Atef.github.io/Exclusive__E-commerce",
+  "homepage": "https://Abdo-Atef.github.io/Exclusive",
   "name": "app1",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
